# instrument_pkg_template

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: testing.yml
{{cookiecutter.__package_name}}/: .cruft.json  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.rst  CODE_OF_CONDUCT.md  LICENSE.md  README.rst  pyproject.toml
{{cookiecutter.__package_name}}/.github/workflows/: codestyle.yml  docs.yml  test_in_container.yml  testing.yml
{{cookiecutter.__package_name}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.__package_name}}/docs/cmad/: calibration_plan.rst  measurement_algos.rst  related_docs.rst
{{cookiecutter.__package_name}}/docs/dev-guide/: dev_env.rst  docs.rst  maintainer_workflow.rst
{{cookiecutter.__package_name}}/docs/user-guide/: customization.rst  index.rst  logger.rst
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/: __init__.py
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/calibration/: calibration.py
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/data/: configrc
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/data/calibration/: README.rst
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/tests/: test_calibration.py  test_file_tools.py
{{cookiecutter.__package_name}}/{{cookiecutter.__package_name}}/util/: config.py  exceptions.py  logger.py
